third_party/blink/renderer/core/paint/embedded_object_painter.cc
@@ -12,7 +12,6 @@
 #include "third_party/blink/renderer/platform/fonts/font.h"
 #include "third_party/blink/renderer/platform/fonts/font_selector.h"
 #include "third_party/blink/renderer/platform/fonts/text_run_paint_info.h"
-#include "third_party/blink/renderer/platform/graphics/graphics_context_state_saver.h"
 #include "third_party/blink/renderer/platform/graphics/paint/drawing_recorder.h"
 #include "third_party/blink/renderer/platform/graphics/path.h"
 #include "third_party/blink/renderer/platform/text/text_run.h"
@@ -55,8 +54,6 @@ void EmbeddedObjectPainter::PaintReplaced(const PaintInfo& paint_info,
   LayoutRect content_rect(layout_embedded_object_.PhysicalContentBoxRect());
   content_rect.MoveBy(paint_offset);
   DrawingRecorder recorder(context, layout_embedded_object_, paint_info.phase);
-  GraphicsContextStateSaver state_saver(context);
-  context.Clip(PixelSnappedIntRect(content_rect));
 
   Font font = ReplacementTextFont();
   const SimpleFontData* font_data = font.PrimaryFont();
