third_party/blink/renderer/core/paint/video_painter.cc
@@ -60,8 +60,6 @@ void VideoPainter::PaintReplaced(const PaintInfo& paint_info,
     }
   }
 
-  // TODO(trchen): Video rect could overflow the content rect due to object-fit.
-  // Should apply a clip here like EmbeddedObjectPainter does.
   DrawingRecorder recorder(context, layout_video_, paint_info.phase);
 
   if (displaying_poster || !force_software_video_paint) {
